Fixed word wrap in "last comments"

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -544,6 +544,7 @@ padding-bottom:10px;
 }
 
 #last_comments dl {
+	word-wrap: break-word;
 	margin-top: 15px;
 }
 
